added lock file

--- a/templates/ouvrir.html
+++ b/templates/ouvrir.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Gestionnaire de Mots de Passe</h1>
-    <h2>Créer un nouveau coffre</h2>
+    <h2>Ouvirir un coffre</h2>
     <form action="/show/{{ nom_fichier }}" method="post">
         <label for="password">Mot de passe maître</label>
         <input type="text" name="password" id="password">
