change route from dash

--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -101,7 +101,7 @@
 
 
 <h2>Add Entry</h2>
-<form action="/dashboard" method="post">
+<form action="/add" method="post">
     <table>
         <tr>
             <td><label for="nom">Nom du site:</label></td>
